--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/lodash": "^4.14.170",
     "@types/minimist": "^1.2.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -77,6 +78,7 @@
     "dotenv": "^10.0.0",
     "electron": "^13.1.2",
     "electron-builder": "^22.11.7",
+    "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "ora": "^5.4.1",
     "react-redux": "^7.2.4",
