--- a/package.json
+++ b/package.json
@@ -57,10 +57,10 @@
     }
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
