--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["/*"],
+      "src/*": ["src/*"],
+      "main/*": ["src/main/*"],
+      "renderer/*": ["src/renderer/*"]
+    }
   },
   "include": ["./src"],
   "ts-node": {
