--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
     "debug": "concurrently -n=render,main -c=green,blue \"npm run start:dev\" \"npm run debug:ele\"",
     "serve": "vite preview"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
     "@reduxjs/toolkit": "^1.6.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -33,14 +30,19 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/wait-on": "^5.3.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "antd": "^4.16.13",
+    "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
     "electron": "^13.1.2",
     "electron-builder": "^22.11.7",
+    "less": "^4.1.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "ora": "^5.4.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
